@@ -1,3 +1,9 @@
+python-dynamic-table (0.8.4-%DIST%1) %DIST%; urgency=low
+
+  * Bug Fix: RenderHTML threw error when rendered without header set
+
+ -- Dan Farnsworth <absltkaos@gmail.com>  Wed,  5 Nov 2014 11:00:00 -0700
+
 python-dynamic-table (0.8.3-%DIST%1) %DIST%; urgency=low
 
   * Bug Fix: Improper TableFilters when a single column is to display
